bin_PROGRAMS = findup
dist_doc_DATA = README.md
findup_SOURCES = src/findup.c
SUBDIRS = lib
ACLOCAL_AMFLAGS = -I m4
EXTRA_DIST = m4/gnulib-cache.m4
# AM_CPPFLAGS = -I$(top_srcdir)/lib
# LDADD = lib/libgnu.a
AM_CPPFLAGS = -I$(top_srcdir)/lib

# You may need to use the following Makefile variables when linking.
# Use them in <program>_LDADD when linking a program, or
# in <library>_a_LDFLAGS or <library>_la_LDFLAGS when linking a library.
#   $(LTLIBINTL) when linking with libtool, $(LIBINTL) otherwise
